# docu-ai

./: .dockerignore  .env.sample  .gitignore  Dockerfile  PLANNING.md  README.md  TASK.md  docker-compose.yml  pyproject.toml
docs/: alembic_guide.md  crawl4ai_docker_deployment.md  scrapper_documentation.md
migrations/: env.py
migrations/versions/: 252cc20ba730_create_initial_tables.py  2c454120dbc1_add_title_and_summary_to_documents_and_.py  b3157d50e29e_add_index_on_documents_url_column.py  c6ca8e1a69e9_add_markdown_content_column_to_.py
schema/: schema.sql  user_permissions.sql
scripts/: run.sh
src/: docu-ai.py  main.py  play.ipynb  test_scraper.py  usage_db.py  usage_embedding.py  usage_llm_completion.py  usage_mcp_server.py
src/cli/: __init__.py
src/config/: logger.py  settings.py
src/db/: __init__.py  interface.py  models.py  postgres.py  session.py
src/ingestion_pipeline/: processor.py
src/llm/: __init__.py
src/llm/completion/: __init__.py  errors.py  factory.py  interface.py  litellm_client.py
src/llm/embedding/: __init__.py  errors.py  factory.py  huggingface_client.py  interface.py  ollama_client.py  openai_client.py  utils.py
src/mcp_server/: main.py  tools.py
src/processing/: chunking.py  metadata.py
src/scraper/: crawl4ai_client.py  discovery.py  factory.py  interface.py  link_crawler.py  sitemap_finder.py  utils.py
