[project]
name = "docu-ai"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.16",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.13.3",
    "greenlet>=3.1.1",
    "html2text>=2024.2.26",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "openai>=1.71.0",
    "pgvector>=0.4.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.3",
    "pydantic-ai>=0.0.53",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "sqlalchemy[asyncio]>=2.0.40",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
pythonpath = "src"
