[project]
name = "docu-ai"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.16",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.13.3",
    "greenlet>=3.1.1",
    "html2text>=2024.2.26",
    "httpx>=0.28.1",
    "litellm>=1.65.7",
    "mcp[cli]>=1.6.0",
    "ollama>=0.4.7",
    "openai>=1.71.0",
    "pgvector>=0.4.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.3",
    "pydantic-ai>=0.0.53",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "sentence-transformers>=4.0.2",
    "sqlalchemy[asyncio]>=2.0.40",
    "tiktoken>=0.9.0",
    "torch>=2.6.0",
    "typer>=0.15.2",
]

[dependency-groups]
dev = ["pytest>=8.3.5", "pytest-asyncio>=0.26.0", "pytest-mock>=3.14.0"]

[tool.pytest.ini_options]
pythonpath = "src"
